--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
-    "lb_port": 8000,
+    "lb_port": 8443,
+    "tls_cert": "server.crt",
+    "tls_key": "server.key",
     "backends": [
         {
             "url": "http://localhost:5001",
